fix border color in dark mode

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -85,6 +85,22 @@
   border: 1px dashed $accent-300;
 }
 
+.media-children {
+  border: 2px solid $accent-200;
+}
+
+span.eloc {
+  font-weight: 300;
+}
+
+span.eloc::after {
+  content: ': ';
+}
+
+span.etitle {
+  font-weight: 500;
+}
+
 body.body--light {
   background: $primary-bg;
 
@@ -250,6 +266,10 @@ body.body--dark {
 
   ::-webkit-scrollbar-thumb {
     background: $scrollbar-thumb-dark;
+  }
+
+  .media-children {
+    border-color: $accent-200-dark;
   }
 }
 
@@ -560,22 +580,6 @@ body.body--dark {
 
 .dashed-border {
   border: 2px dashed $primary;
-}
-
-.media-children {
-  border: 2px solid $accent-200;
-}
-
-span.eloc {
-  font-weight: 300;
-}
-
-span.eloc::after {
-  content: ': ';
-}
-
-span.etitle {
-  font-weight: 500;
 }
 
 a {
